<resources>
    <string name="app_name" translatable="false">Sehatin</string>
    <string name="icon" translatable="false">icon</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="full_name">Full Name</string>
    <string name="do_you_have_any_of_the_following_diseases">Do you have any of the following diseases?</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="exercise">Exercise</string>
    <string name="profile">Profile</string>
    <string name="image">image</string>
    <string name="search">Search</string>
    <string name="search_something">Search Something</string>
    <string name="notification">notification</string>
    <string name="get_food_information_by_your_camera">Get food information by your camera</string>
    <string name="recommended_food">Recommended Food</string>
    <string name="recommended_exercises">Recommended Exercises</string>
    <string name="other">Other</string>
    <string name="food">Food</string>
    <string name="sehatin" translatable="false">SEHATIN</string>
    <string name="more">more</string>
    <string name="post_s_image">post\'s image</string>
    <string name="tag" translatable="false">Tag</string>
    <string name="like_button">Like Button</string>
    <string name="comment_button">Comment Button</string>
    <string name="bookmark_button">Bookmark Button</string>
    <string name="add_post_button">Add Post Button</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_photo">Choose photo</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string-array name="gender_list">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string name="error_email_format">Email\'s format invalid</string>
    <string name="error_email_input">Please fill your email</string>
    <string name="error_password_input">Password at least have 6 characters</string>
    <string name="error_username_input">Please fill your name</string>
    <string name="error_selectedDate_input">Please select your date of birth</string>
    <string name="error_gender_input">Please select your gender</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about ?</string>
    <string name="add_image">Add Image</string>
    <string name="log_out">Log out</string>
    <string name="retry">Retry</string>
    <string name="uploading">Uploading…</string>
    <string name="trending_post">Trending Post</string>
    <string name="leave_a_comment">leave a comment…</string>
    <string name="send">Send</string>
    <string name="health">Health</string>
    <string name="article">Articles</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My account</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="my_post">My post</string>
    <string name="saved_post">Saved post</string>
    <string name="please_complete_your_diagnosis">Please complete your diagnosis</string>
    <string name="general">General</string>
    <string name="setting">Setting</string>
    <string name="share_feedback">Share feedback</string>
    <string name="we_provide_you_food_and_exercise_recommendation_based_on_your_disease_diagnosis">we provide you food and exercise recommendation based on your disease diagnosis</string>
    <string name="one_step_closer">One step closer</string>
    <string name="for_better_experience_please_help_us_to_know_your_disease">For better experience, please help us to know your disease</string>
    <string name="not_now">Not now</string>
    <string name="do_it_now">Do it now</string>
    <string name="please_answer_the_questions_below_honestly">Please answer the questions below honestly :</string>
    <string name="select_diseases">Select diseases</string>
    <string name="answer_question">Answer Questions</string>
    <string name="diagnose_explain">By answering the questions honestly, we will diagnose your disease by your answers and help you to decide which food and exercise is good for you</string>
    <string name="info_select_diseases">If you already know your condition, press button below to select diseases</string>
    <string name="ask_diseases">Do you have any of the following diseases?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disease_result">Based on the results of the screening, you are diagnosed :</string>
    <string name="error">Something went error</string>
    <string name="hasil">Result</string>
    <string name="camera_button">Camera Button</string>
    <string name="deteksi_objek">Object Detection</string>
    <string name="gambar_tidak_terdeteksi">Image Not Detected</string>
    <string name="hasil_diagnosa">After answering questions related to the disease, the data is the result of the diagnosis that has been obtained</string>
    <string name="or">OR</string>
    <string name="ask_question_again">If you want to answer the question again, please press the button below</string>
    <string name="coba_cari_sesuatu_dengan_memasukkan_keyword">Try search something by entering keywords</string>
    <string name="kirim_pesan">Send messages</string>
    <string name="consultation">Consultation</string>
    <string name="ketik_sesuatu">Type something</string>
    <string name="anda_belum_memiliki_pesan">You have no messages</string>
    <string name="konfirasi_amp_bayar" translatable="false"><![CDATA[Konfirmasi & Bayar]]></string>
    <string name="diskon">Discount</string>
    <string name="biaya_per">Price for</string>
    <string name="_30_menit">30 minute</string>
    <string name="total_harga">Total Price</string>
    <string name="metode_pembayaran">Payment Method</string>
    <string name="total_pembayaran">Total Payment</string>
    <string name="transaksi_berhasil">Transaction Success</string>
    <string name="transaksi_batal">Transaction Canceled</string>
    <string name="transaksi_gagal">Transaction Failed</string>
    <string name="transaksi_pending">Transaction Pending</string>
    <string name="rekomendasi_dokter">Rekomendasi Dokter</string>
    <string name="sesi_aktif">Sesi Aktif</string>
    <string name="aktif_hingga">Aktif Hingga :</string>
    <string name="protein">Protein</string>
    <string name="lemak">Lemak</string>
    <string name="karbo">Karbo</string>
    <string name="kalori">Kalori</string>
    <string name="info_nutrisi">Total Nutrisi</string>
</resources>