<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/horizontalMargin">

    <TextView
        android:id="@+id/textView7"
        style="@style/font_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_step_closer"
        android:textColor="@color/black8"
        android:textSize="@dimen/veryBigTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialogImageSize"
        android:layout_marginTop="@dimen/horizontalMargin"
        android:src="@drawable/meditate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView8"
        style="@style/font_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontalMargin"
        android:text="@string/we_provide_you_food_and_exercise_recommendation_based_on_your_disease_diagnosis"
        android:textColor="@color/black8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView9"
        style="@style/font_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/postMargin"
        android:text="@string/for_better_experience_please_help_us_to_know_your_disease"
        android:textColor="@color/black8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/negativeBtn"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/horizontalMargin"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle_corner_background"
        android:backgroundTint="@color/grey2"
        android:paddingStart="@dimen/postMargin"
        android:paddingEnd="@dimen/postMargin"
        android:text="@string/not_now"
        android:textAllCaps="false"
        android:textColor="@color/grey7"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positiveBtn"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/horizontalMargin"
        android:layout_marginBottom="5dp"
        android:background="@drawable/circle_corner_background"
        android:backgroundTint="@color/primary"
        android:paddingStart="@dimen/postMargin"
        android:paddingEnd="@dimen/postMargin"
        android:text="@string/do_it_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>