<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/horizontalMargin">

    <View
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@drawable/circle_background"
        android:backgroundTint="#DFDFDF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/font_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontalMargin"
        android:text="@string/diagnose_explain"
        android:textColor="@color/black8"
        android:textSize="14sp" />

    <TextView
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/postMargin"
        android:text="OR"
        android:textColor="@color/black8"
        tools:ignore="HardcodedText" />

    <TextView
        style="@style/font_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/postMargin"
        android:text="@string/info_select_diseases"
        android:textColor="@color/black8"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/actionBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/horizontalMargin"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/primary"
        style="@style/font_bold"
        android:text="@string/select_diseases"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false" />

</LinearLayout>