<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/appbarHomePaddingTop"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/appbarHeight"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/horizontalMargin"
        android:layout_marginEnd="@dimen/horizontalMargin"
        android:layout_marginBottom="@dimen/postMargin"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:paddingStart="@dimen/postMargin"
        android:paddingEnd="@dimen/postMargin"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/notificationIcn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/searchIcn"
            android:layout_width="@dimen/minIconSize"
            android:layout_height="@dimen/minIconSize"
            android:layout_centerVertical="true"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/postMargin"
            android:layout_marginEnd="@dimen/postMargin"
            android:layout_toEndOf="@id/searchIcn"
            android:background="@null"
            android:hint="@string/search_something"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/normalTextSize" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/notificationIcn"
        android:layout_width="@dimen/minIconSize"
        android:layout_height="@dimen/minIconSize"
        android:contentDescription="@string/notification"
        android:src="@drawable/ic_notif"
        android:layout_marginEnd="@dimen/horizontalMargin"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>